--- a/coupang/Mission-03/index.html
+++ b/coupang/Mission-03/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <link rel="stylesheet" href="/coupang/Mission-03/stylesheets/main.css" />
 </head>
 
 <body>
