--- a/coupang/Mission-05/index.html
+++ b/coupang/Mission-05/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
 
-  <head>
+<head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,42 +9,260 @@
   <link rel="icon" href="/assets/favicon/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/stylesheets/main.css" />
-  <script type="module" src="./js/main.js"></script>
-  </head>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="/coupang/Mission-05/stylesheets/main.css" />
+  <script type="module" src="/coupang/Mission-05/js/main.js"></script>
+</head>
 
-  <body>
-    <header class="header">
-      <!-- 헤더 영역 -->
-      <!-- 대제목의 경우 "Coupang"으로 미리 마크업되어 있습니다. -->
-      <h1 class="sr-only">Coupang</h1>
-      <div class="header__inner">
-        <!-- 카테고리 버튼은 .header__inner 영역 안에 마크업 해주세요. -->
+<body>
+  <header class="header">
+    <!-- 헤더 영역 -->
+    <!-- 대제목의 경우 "Coupang"으로 미리 마크업되어 있습니다. -->
+    <h1 class="sr-only">Coupang</h1>
+    <div class="header__inner">
+      <!-- 카테고리 버튼은 .header__inner 영역 안에 마크업 해주세요. -->
+      <button class="button--category">
+        <img src="/coupang/Mission-05/assets/icon/hamburger.svg" alt="카테고리">
+        <span>카테고리</span>  
+      </button>
+    </div>
+  </header>
 
+  <nav class="navigation">
+    <!-- 내비게이션 영역 -->
+    <!-- 내비게이션 제목 -->
+    <div class="navigation__inner">
+      <!-- 카테고리별 내비게이션(메뉴) 영역 -->
+      <ul class="navigation__list">
+        <li class="first-depth-item">
+          <a href="/" role="button">
+            <img src="/coupang/Mission-05/assets/iconfont/clothes.svg" alt="패션의류/잡화">
+            패션의류/잡화
+          </a>
+          <div class="depth">
+            <div class="depth-list">
+              <ul>
+                <li class="second-depth-list">
+                  <a href="/" role="button">
+                    여성패션
+                    <div class="third-depth-list">
+                      <ul>
+                        <li><a href="/">의류</a></li>
+                        <li><a href="/">속옷/잠옷</a></li>
+                        <li><a href="/">신발</a></li>
+                      </ul>
+                    </div>
+                  </a>
+                </li>
+                <li class="second-depth-list"><a href="/">남성패션</a></li>
+                <li class="second-depth-list"><a href="/">유아동패션</a></li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/beauty.svg" alt="뷰티">
+            뷰티
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/baby.svg" alt="출산유아동">
+            출산유아동
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/foods.svg" alt="식품">
+            식품
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/kitchenware.svg" alt="주방용품">
+            주방용품
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/houseware.svg" alt="생활용품">
+            생활용품
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/interior.svg" alt="홈인테리어">
+            홈인테리어
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/appliances.svg" alt="가전디지털">
+            가전디지털
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/sports.svg" alt="스포츠">
+            스포츠
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/car.svg" alt="자동차용품">
+            자동차용품
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/book.svg" alt="도서음반">
+            도서음반
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/toy.svg" alt="완구취미">
+            완구취미
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/stationery.svg" alt="문구오피스">
+            문구오피스
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/pet.svg" alt="반려동물">
+            반려동물
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/travel.svg" alt="여행티켓">
+            여행티켓
+          </a>
+        </li>
+        <li class="first-depth-item">
+          <a href="/">
+            <img src="/coupang/Mission-05/assets/iconfont/theme.svg" alt="테마관">
+            테마관
+          </a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
+
+  <main class="main">
+    <!-- 메인 콘텐츠 영역 -->
+    <!-- 해당 영역은 추가적인 마크업없이 비워놓아 주세요. -->
+  </main>
+
+  <footer class="footer">
+    <!-- 푸터 영역 -->
+    <div class="customer-guide">
+      <p class="guide-item">회사소개</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">입점 / 제휴문의</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">공지사항</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">고객의 소리</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item"><strong>개인정보 처리방침</strong></p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">쿠팡페이 이용약관</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item"><strong>쿠팡페이 개인정보 처리방침</strong></p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">신뢰관리센터</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">제휴마케팅</p>
+      <span class="divider" aria-hidden="true">|</span>
+      <p class="guide-item">광고안내</p>
+      <span class="divider" aria-hidden="true">|</span>
+    </div>
+
+    <div class="customer-center">
+      <h1>
+        Coupang
+      </h1>
+      <div class="footer-content">
+        <address>
+          상호명 및 호스팅 서비스 제공 : 쿠팡(주)
+          <br>
+          대표이사 : 강한승, 박대준
+          <br>
+          서울시 송타구 송파대로 570
+          <br>
+          사업자 등록번호 : 120-880-00767
+          <br>
+          통신판매업신고 : 2017-서울송파-0680
+        </address>
       </div>
-    </header>
-
-    <nav class="navigation">
-      <!-- 내비게이션 영역 -->
-      <!-- 내비게이션 제목 -->
-
-      <div class="navigation__inner">
-        <!-- 카테고리별 내비게이션(메뉴) 영역 -->
-
+      <div class="contact-info">
+        365고객센터 | 전자금융거래분쟁처리담당
+        <br>
+        <a href="tel:1577-7011">1577-7011</a>
+        서울시 송파구 송파대로 570
+        <br>
+        <a href="mailto:help@coupang.com?subject=문의사항">
+          email : help@coupang.com
+        </a>
       </div>
-    </nav>
+      <div class="payment">
+        <strong>우리은행 채무지급보증 안내</strong>
+        <span>
+          <br>
+          당사는 고객님이 현금 결제한 금액에 대해
+          <br>
+          우리은행과 채무지급보증 계약을 체결하여
+          <br>
+          안전거래를 보장하고 있습니다.
+        </span>
+      </div>
+      <div class="copyright">
+        <p class="copyright-txt">
+          사이버몰 내 판매되는 상품 중에는 쿠팡에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
+          <br>
+          마켓플레이스(오픈마켓) 상품의 경우 쿠팡은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
+          <br>
+          쿠팡은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
+          <br>
+          쿠팡은 소비자 보호와 안전거래를 위해 신뢰관리센터(CM112@coupang.com)를 운영하고 있으며, 관련 분쟁이 발생할 경우 별도의 분쟁처리절차에 의거 분쟁이 처리됩니다.
+          <br>
+          Copyright ⓒ Coupang Corp. 2010-2020 All Right Reserved.
+        </p>
+        <ul class="sns-link">
+          <li>
+            <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+              <img src="/coupang/Mission-05/assets/icon/sns-facebook.svg" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="https://section.blog.naver.com/" target="_blank" rel="noreferrer noopener">
+              <img src="/coupang/Mission-05/assets/icon/sns-naver-blog.svg" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
+              <img src="/coupang/Mission-05/assets/icon/sns-instagram.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
 
-    <main class="main">
-      <!-- 메인 콘텐츠 영역 -->
-      <!-- 해당 영역은 추가적인 마크업없이 비워놓아 주세요. -->
-    </main>
 
-    <footer class="footer">
-      <!-- 푸터 영역 -->
-      <!-- 푸터 관련 콘텐츠는 .footer 영역 안에 마크업 해주세요. -->
-      
-    </footer>
-  </body>
+
+
+
+    </div>
+
+
+  </footer>
+</body>
 
 </html>
